--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "firebase": "^9.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.12.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
